--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,9 @@ header{
         width: 1220px;
     }
 }
+.clb {
+  clear: both;
+}
 body .pl0{
     padding-left: 0;
 }
@@ -44,7 +47,9 @@ body .bt3{
 .top30{
     margin-top: 30px;
 }
-
+.wel {
+  color: #ffffff;
+}
 body .menu {
     list-style: none;
     margin-top: 15px;
@@ -59,10 +64,6 @@ body .menu {
     width: 16.5%;
     padding-right: 10px;
     padding-left: 10px;
-}
-.menu > li:nth-child(4) > a{
-    padding-right: 0px;
-    padding-left: 0px;
 }
 body .menu > li > a{
     display: inline-block;
@@ -876,7 +877,7 @@ body .carosel-control {
             Here we use it to create a stylish bar behind slides */
 	margin-top: 138px;
 	height: 80px;
-	background-color: #a0d034;
+	background-color: #041573;
 }
 .mis-slider li a {
 	text-decoration: none;
@@ -931,16 +932,17 @@ color: #fff;
 
 
 .title-top {
+  margin-top: 50px;
   font-size: 40px;
   font-weight: 700;
-  color: #FF5722;
+  color: #3f51b5;
   text-align: center;
 }
 .w3-agileitsline {
     height: 5px;
     width: 10%;
-    margin: 20px auto 50px;
-    background-color: #FF5722;
+    margin: 20px auto 20px;
+    background-color: #3f51b5;
     border-radius: 20px;
 }
 /*
@@ -1451,4 +1453,7 @@ color: #fff;
   text-align: center;
   color: #fff;
   font-size: 12px;
+}
+.footer-news:hover {
+  text-decoration: none;
 }
